--- a/app/styles/sass/blocks/body-overlay.scss
+++ b/app/styles/sass/blocks/body-overlay.scss
@@ -4,13 +4,21 @@
 	left: 0;
 	width: 100%;
 	height: 100%;
-	background: $black;
+	//background-color: $black;
+	background-color: rgba(#fff, 0.1);
+	@supports ((-webkit-backdrop-filter: blur(4px)) or (backdrop-filter: blur(4px))) {
+		-webkit-backdrop-filter: blur(4px);
+		backdrop-filter: blur(4px);
+	}
+
 	opacity: 0;
 	z-index: -1;
+	pointer-events: none;
 	transition: opacity 0.3s ease-in-out, z-index 0.3s ease-in-out;
 	&._active {
-		transition: opacity  0.3s ease-in-out, z-index 0.3s ease-in-out ;
+		transition: opacity 0.3s ease-in-out, z-index 0.3s ease-in-out;
 		z-index: 99;
-		opacity: .9;
+		opacity: 0.9;
+		pointer-events: visible;
 	}
 }
