--- a/app/styles/sass/blocks/example-block.scss
+++ b/app/styles/sass/blocks/example-block.scss
@@ -1,38 +1,42 @@
 .header {
 	position: relative;
 	background-color: $black;
-	padding: 10px;
+	padding: calc($index * .34);
 	display: flex;
-	gap: 10px;
+	gap: calc($index * .34);
 	&__left {
-		flex: 1 0 690px;
+		flex: 0 1 36.5%;
 		display: flex;
 		flex-direction: column;
-		gap: 10px;
+		gap: calc($index * .34);
 	}
 	&__right {
-		flex: 1 1 100%;
+		flex: 1 1 auto;
 		display: flex;
 		flex-direction: column;
 		justify-content: space-between;
-		gap: 10px;
+		gap: calc($index * .34);
 	}
 }
 
 .game {
+	position: relative;
 	width: 100%;
 	flex: 1 1 auto;
-	padding: 30px;
+	padding: calc($index * 1);
+	&__body {
+		position: relative;
+		min-height: 100%;
+	}
 }
 
 .message {
-	padding: 65px 30px 15px;
-	flex: 0 1 288px;
+	flex: 0 1 27%;
 }
 
 .header__right-top {
 	display: flex;
-	gap: 15px;
+	gap: calc($index * .5);
 	align-items: center;
 }
 
@@ -42,20 +46,23 @@
 	display: flex;
 	align-items: center;
 	justify-content:  center;
-	min-height: 50px;
+	min-height: calc($index * 1.7);
 	overflow: hidden;
-	padding: 0 10px;
+	padding: 0;
 	p {
+		font-size: calc($index * 0.67);
 		position: absolute;
 		width: 100%;
 		white-space: nowrap;
-		margin: 0;		
+		margin: 0;
 		opacity: 0.75;
+		overflow: hidden;
 	}
 	&::before,
 	&::after {
 		content: "";
 		position: absolute;
+		display: block;
 		width: 10px;
 		top: 0;
 		bottom: 0;
@@ -82,17 +89,17 @@
 	flex-direction: column;
 	justify-content: center;
   height: 100%;
-	padding: 15px;
+	padding: calc($index * .34);
 	// .start-block__title
 
 	// .start-block__logo
 
 	&__logo {
-		@include adaptiv-value("width", 170, 50, 1);
+		width: calc($index * 5.7);
 		margin-left: auto;
 		margin-top: 0;
 		margin-right: auto;
-		@include adaptiv-value("margin-bottom", 78, 20, 1);
+		margin-bottom: calc($index * 2.5);
 		img {
 			display: block;
 			width: 100%;
@@ -107,32 +114,30 @@
 			line-height: 1.19;
 			text-transform: uppercase;
 			text-align: center;
-			//font-size: calc($index * 4.35);
-			@include adaptiv-value("font-size", 104, 20, 1);
-			@include adaptiv-value("margin-bottom", 75, 15, 1);
+			font-size: calc($index * 3.47);
+			margin-bottom: calc($index * 2.5);
 		}
 		p {
 			font-weight: 300;
-			@include adaptiv-value("font-size", 32, 10, 1);
+			font-size: calc($index * 1.07);
 			line-height: 1.3;
 			text-align: center;
-			@include adaptiv-value("max-width", 600, 200, 1);
+			max-width: calc($index * 20);
 			margin: 0 auto;
 		}
 	}
 }
 
 .footer {
-	min-height: 50px;
 	display: flex;
 	align-items: center;
 	justify-content: center;
-	padding: 13px 10px 13px 10px;
+	padding: calc($index * 0.5);
 	overflow: hidden;
 	p {
 		font-weight: 400;
-		@include adaptiv-value("font-size", 20, 14, 1);
-		line-height: 23px;
+		font-size: calc($index * 0.67);
+		line-height: 1.1;
 		text-align: center;
 		margin: 0;
 		opacity: 0.75;
