--- a/app/styles/sass/blocks/menu-burger.scss
+++ b/app/styles/sass/blocks/menu-burger.scss
@@ -1,8 +1,8 @@
 #nav-icon {
 	display: block;
-	width: 42px;
-	height: 32px;
-	margin-right: 15px;
+	width: calc($index * 1.335);
+	height: calc($index * 1);
+	margin-right: calc($index * .5);
 	position: relative;
 	transform: rotate(0deg);
 	transition: 0.5s ease-in-out;
@@ -13,7 +13,7 @@
 #nav-icon span {
 	display: block;
 	position: absolute;
-	height: 4px;
+	height: calc($index * .1);
 	width: 50%;
 	background: #fff;
 	opacity: 1;
@@ -38,7 +38,8 @@
 
 #nav-icon span:nth-child(3),
 #nav-icon span:nth-child(4) {
-	top: 15px;
+	top: 50%;
+	transform: rotate(0deg) translateY(-50%);
 }
 
 #nav-icon span:nth-child(3) {
@@ -47,7 +48,7 @@
 
 #nav-icon span:nth-child(5),
 #nav-icon span:nth-child(6) {
-	top: 30px;
+	bottom: 0;
 }
 
 #nav-icon._active span:nth-child(1),
@@ -61,12 +62,12 @@
 }
 
 #nav-icon._active span:nth-child(1) {
-	top: 7px;
+	top: calc($index * .3668);
 }
 
 #nav-icon._active span:nth-child(2) {
-	left: calc(50% - 5px);
-	top: 7px;
+	top: calc($index * .3668);
+	left: calc(36%);
 }
 
 #nav-icon._active span:nth-child(3) {
@@ -80,12 +81,12 @@
 }
 
 #nav-icon._active span:nth-child(5) {
-	top: 22px;
+//	top: calc($index * .7);
 }
 
 #nav-icon._active span:nth-child(6) {
-	left: calc(50% - 5px);
-	top: 22px;
+	left: calc(36%);
+	//top: calc($index * .7);
 }
 
 /* / nav */
