--- a/app/styles/sass/blocks/settings.scss
+++ b/app/styles/sass/blocks/settings.scss
@@ -4,6 +4,7 @@
 	// .settings__progress
 
 	&__progress {
+		margin-bottom: calc($index * 1.33);
 	}
 }
 .progress-block {
@@ -12,17 +13,16 @@
 	&__title {
 		display: flex;
 		font-weight: 400;
-		font-size: calc($index * .5);
-		line-height: calc($index * .6);
+		font-size: calc($index * 0.5);
+		line-height: calc($index * 0.6);
 		color: $white;
-		margin-bottom: calc($index * .2);
+		margin-bottom: calc($index * 0.2);
 		text-transform: uppercase;
 	}
 
 	// .progress-block__title-name
 
 	&__title-name {
-		
 	}
 
 	// .progress-block__title-category
@@ -44,18 +44,16 @@
 	&__track {
 		flex: 1 1 auto;
 		display: grid;
-		grid-template-columns: repeat(37, 1fr);
-		width: 100%;
-		height: calc($index * 1.47);
-		padding: calc($index * .15);
-		gap: calc($index * .17);
-		
+		grid-template-columns: repeat(15, 1fr);
+		height: calc($index * 1.33);
+		padding: calc($index * 0.15);
+		gap: calc($index * 0.17);
 		span {
 			display: block;
 			background-color: #383838;
 			height: 100%;
 			&._active {
-				background-color: #ff3c48;
+				background-color: #389b6c;
 			}
 		}
 	}
@@ -64,8 +62,8 @@
 
 	&__value {
 		font-weight: 500;
-		font-size: calc($index * .5);
-		line-height: calc($index * .65);
+		font-size: calc($index * 0.5);
+		line-height: calc($index * 0.67);
 		display: flex;
 		justify-content: center;
 		align-items: center;
@@ -75,8 +73,218 @@
 		span {
 			font-family: noto-sans-tm;
 			font-weight: 300;
-			font-size: calc($index * .67);
-			margin-right: 3px;
+			font-size: calc($index * 0.67);
 		}
 	}
+
+	&.progress-full {
+		.progress-block__track {
+			grid-template-columns: repeat(37, 1fr);
+			height: calc($index * 1.47);
+			span {
+				
+				&._active {
+					background-color: #ff3c48;
+				}
+			}
+		}
+		.progress-block__value {
+			span {
+				margin-right: calc($index * 0.1);
+			}
+		}
+	}
+}
+
+.panel-settings {
+	display: grid;
+	grid-template-columns: calc($index * 8.96) calc($index * 10.36) calc(
+			$index * 1.3
+		);
+	align-items: end;
+	// .panel-settings__tracks
+
+	&__tracks {
+	}
+
+	// .panel-settings__bonuses
+
+	&__bonuses {
+		display: grid;
+		grid-template-columns: repeat(3, 1fr);
+		gap: 2px;
+		height: calc($index * 1.47);
+		margin-bottom: calc($index * 2.53);
+	}
+	// .panel-settings__bonus
+
+	&__bonus {
+		font-family: noto-sans-tm;
+		font-weight: 400;
+		font-size: calc($index * 0.66);
+		line-height: 1.3;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		background-color: #424242;
+		color: rgba($white, 0.5);
+		padding: calc($index * 0.26);
+		&::before {
+			content: "";
+			display: block;
+			width: calc($index * 0.93);
+			height: calc($index * 0.93);
+			background-position: center center;
+			background-repeat: no-repeat;
+			background-size: cover;
+			margin-right: 6px;
+		}
+		span {
+			text-transform: uppercase;
+		}
+		&:nth-child(1) {
+			&::before {
+				background-image: url(../images/dist/icons/bonus-diamond.png);
+			}
+		}
+		&:nth-child(2) {
+			&::before {
+				background-image: url(../images/dist/icons/bonus-star.png);
+			}
+		}
+		&:nth-child(3) {
+			&::before {
+				background-image: url(../images/dist/icons/bonus-money.png);
+			}
+		}
+	}
+
+	.bonus-block {
+	}
+
+	// .panel-settings__progress
+
+	&__progress {
+		&:not(:last-child) {
+			margin-bottom: calc($index * 0.466);
+		}
+	}
+
+	// .panel-settings__photo
+
+	&__photo {
+		align-self: end;
+		img {
+			display: block;
+			width: 100%;
+			height: 100%;
+			object-fit: cover;
+		}
+	}
+
+	// .panel-settings__icons
+
+	&__icons {
+	}
+
+	// .panel-settings__icon
+
+	&__icon {
+		position: relative;
+		width: calc($index * 1.33);
+		height: calc($index * 1.33);
+		border: 1px solid #fff;
+		opacity: 0.25;
+		&:not(:last-child) {
+			margin-bottom: calc($index * 1.34);
+		}
+		&::before {
+			content: "";
+			position: absolute;
+			top: calc($index * 0.23);
+			right: calc($index * 0.23);
+			bottom: calc($index * 0.23);
+			left: calc($index * 0.23);
+			display: block;
+			background-position: center center;
+			background-repeat: no-repeat;
+			background-image: url(../images/dist/icons/rocket.svg);
+			background-size: cover;
+		}
+		&._active {
+			animation: iconAnimation 2.5s infinite ease;
+		}
+		&:nth-child(1) {
+			&::before {
+				background-image: url(../images/dist/icons/rocket.svg);
+			}
+		}
+		&:nth-child(2) {
+			&::before {
+				background-image: url(../images/dist/icons/gear.svg);
+			}
+		}
+		&:nth-child(3) {
+			&::before {
+				background-image: url(../images/dist/icons/sand-clock.svg);
+			}
+		}
+		&:nth-child(4) {
+			&::before {
+				background-image: url(../images/dist/icons/handshake.svg);
+			}
+		}
+		&:nth-child(5) {
+			&::before {
+				background-image: url(../images/dist/icons/communication.svg);
+			}
+		}
+		&:nth-child(6) {
+			&::before {
+				background-image: url(../images/dist/icons/bow-tie.svg);
+			}
+		}
+	}
+}
+
+@keyframes iconAnimation {
+	0% {
+		opacity: 0.25;
+	}
+	50% {
+		opacity: 1;
+	}
+	100% {
+		opacity: 0.25;
+	}
+}
+
+.progress-block {
+	// .progress-block__title
+
+	&__title {
+	}
+
+	// .progress-block__title-category
+
+	&__title-category {
+	}
+
+	// .progress-block__body
+
+	&__body {
+	}
+
+	// .progress-block__track
+
+	&__track {
+	}
+
+	// .progress-block__value
+
+	&__value {
+	}
+}
+
+.enterprise {
 }
