--- a/app/styles/sass/blocks/example-block.scss
+++ b/app/styles/sass/blocks/example-block.scss
@@ -1,21 +1,21 @@
 .header {
 	position: relative;
 	background-color: $black;
-	padding: calc($index * .34);
+	padding: calc($index * 0.34);
 	display: flex;
-	gap: calc($index * .34);
+	gap: calc($index * 0.34);
 	&__left {
 		flex: 0 1 36.5%;
 		display: flex;
 		flex-direction: column;
-		gap: calc($index * .34);
+		gap: calc($index * 0.34);
 	}
 	&__right {
 		flex: 1 1 auto;
 		display: flex;
 		flex-direction: column;
 		justify-content: space-between;
-		gap: calc($index * .34);
+		gap: calc($index * 0.34);
 	}
 }
 
@@ -36,16 +36,16 @@
 
 .header__right-top {
 	display: flex;
-	gap: calc($index * .5);
+	gap: calc($index * 0.5);
 	align-items: center;
 }
 
 .banner {
-	flex: 1 1 auto;	
+	flex: 1 1 auto;
 	position: relative;
 	display: flex;
 	align-items: center;
-	justify-content:  center;
+	justify-content: center;
 	min-height: calc($index * 1.7);
 	overflow: hidden;
 	padding: 0;
@@ -77,9 +77,9 @@
 	}
 }
 
-.game-content {
+.page-content {
 	flex: 1 1 auto;
-	// .game-content__start-block
+	// .page-content__start-block
 
 	&__start-block {
 	}
@@ -88,8 +88,8 @@
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
-  height: 100%;
-	padding: calc($index * .34);
+	height: 100%;
+	padding: calc($index * 0.34);
 	// .start-block__title
 
 	// .start-block__logo
@@ -100,6 +100,7 @@
 		margin-top: 0;
 		margin-right: auto;
 		margin-bottom: calc($index * 2.5);
+		user-select: none;
 		img {
 			display: block;
 			width: 100%;
@@ -125,6 +126,38 @@
 			max-width: calc($index * 20);
 			margin: 0 auto;
 		}
+	}
+}
+
+.page-content {
+	// .page-content__container
+
+	&__container {
+
+	}
+
+	// .page-content__title
+
+	&__title {
+		color: rgba($white, 0.75);
+		margin-bottom: calc($index * 1.47);
+		h2 {
+			font-style: normal;
+			font-weight: 300;
+			font-size: calc($index * 1.067);
+			line-height: 1.3;
+			text-align: center;
+			border-bottom: 1px solid rgba($white, 0.05);
+			padding-bottom: calc($index * .5);
+		}
+		p {
+			font-weight: 300;
+			font-size: calc($index * .8);
+			line-height: 1.3;
+			text-align: center;
+			max-width: calc($index * 27.3);
+			margin: calc($index * .66) auto 0 auto;
+		 }
 	}
 }
 
