--- a/app/styles/sass/blocks/messages.scss
+++ b/app/styles/sass/blocks/messages.scss
@@ -51,6 +51,7 @@
 	color: #8e8e8e;
 	background-color: $button-bg;
 	border: none;
+	user-select: none;
 	transition: background-color .25s ease;
 	@media(any-hover: hover) {
 		&:hover {
