--- a/app/styles/sass/blocks/shop.scss
+++ b/app/styles/sass/blocks/shop.scss
@@ -18,27 +18,35 @@
 	&__items {
 		display: grid;
 		grid-template-columns: repeat(4, 1fr);
-		gap: calc($index * .5);
+		gap: calc($index * 0.5);
+		margin-bottom: calc($index * 1.16);
 	}
 
 	// .block-shop__item
 
 	&__item {
 	}
+
+	// .block-shop__panel
+
+	&__panel {
+	}
 }
 
 .shop-item {
-	//width: 250px;
 	background-color: $black;
 	border: 2px solid $button-bg;
-	padding: calc($index * .5);
+	padding: calc($index * 0.5);
 	// .shop-item__img
 
 	&__img {
+		position: relative;
 		width: 100%;
-		margin-bottom: calc($index * .5);
+		margin-bottom: calc($index * 0.5);
 		overflow: hidden;
+		padding-bottom: 80%;
 		img {
+			position: absolute;
 			width: 100%;
 			height: 100%;
 			object-fit: cover;
@@ -50,18 +58,18 @@
 	&__price {
 		font-family: noto-sans-tm;
 		font-weight: 700;
-		font-size: calc($index * .6);
+		font-size: calc($index * 0.6);
 		line-height: 1.3;
-		margin-bottom: calc($index * .16);
+		margin-bottom: calc($index * 0.16);
 	}
 
 	// .shop-item__title
 
 	&__title {
 		font-weight: 500;
-		font-size: calc($index * .53);
+		font-size: calc($index * 0.53);
 		line-height: 1.3;
-		color: #ff3c48;
+		color: $accent;
 		margin-bottom: calc($index * 0.4);
 	}
 
@@ -71,7 +79,7 @@
 		display: flex;
 		justify-content: space-between;
 		font-weight: 500;
-		font-size: calc($index * .46);
+		font-size: calc($index * 0.46);
 		line-height: 1.2;
 		text-align: center;
 		color: rgba($white, 0.75);
@@ -81,25 +89,26 @@
 	// .shop-item__checkbox
 
 	&__checkbox {
-		display: flex;
-		align-items: center;
 		input {
-			display: none;		
+			display: none;
 		}
 		label {
-			display: block;
-			background-color: $black;
-			border: 1px solid $button-bg;
-			width: calc($index * .43);
-			height: calc($index * .43);
+			display: flex;
+			align-items: center;
 			cursor: pointer;
+			&::before {
+				content: "";
+				display: inline-block;
+				background-color: $black;
+				border: 1px solid $button-bg;
+				width: calc($index * 0.43);
+				height: calc($index * 0.43);
+				margin-right: calc($index * 0.26);
+			}
 		}
-		input:checked + label {
+		input:checked + label::before {
 			background-color: rgba($white, 0.75);
-			box-shadow: 0px 0px 2px rgba(0, 0, 0, .1) inset;
-		}
-		span {
-			margin-left: calc($index * .26);
+			box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.1) inset;
 		}
 	}
 
@@ -108,12 +117,174 @@
 	&__color {
 		display: flex;
 		align-items: center;
-		span {
-			display: block;
-			width: calc($index * .43);
-			height: calc($index * .43);
-			background-color: #5E5A5A;
-			margin-left: calc($index * .26);
+		&::after {
+			content: "";
+			display: inline-block;
+			width: calc($index * 0.43);
+			height: calc($index * 0.43);
+
+			margin-left: calc($index * 0.26);
+		}
+
+		&.gray {
+			&::after {
+				background-color: #5e5a5a;
+			}
+		}
+
+		&.black {
+			&::after {
+				background-color: #000000;
+			}
+		}
+		&.brown {
+			&::after {
+				background-color: #462829;
+			}
+		}
+		&.white {
+			&::after {
+				background-color: #ffffff;
+			}
+		}
+		&.blue {
+			&::after {
+				background-color: #3c67ff;
+			}
+		}
+		&.yellow {
+			&::after {
+				background-color: #b79a00;
+			}
 		}
 	}
+}
+
+.block-shop {
+}
+.shop-panel {
+	// .shop-panel__top
+
+	&__top {
+		display: flex;
+		justify-content: space-between;
+		align-items: center;
+		margin-bottom: calc($index * 1.56);
+	}
+
+	// .shop-panel__your-bonus
+
+	&__your-bonus {
+		display: flex;
+		align-items: center;
+		font-weight: 500;
+		font-size: calc($index * 0.53);
+		line-height: 1.2;
+		padding: calc($index * 0.33) calc($index * 0.8);
+		span {
+			display: flex;
+			align-items: center;
+			font-family: noto-sans-tm;
+			font-weight: 400;
+			font-size: calc($index * 0.66);
+			text-transform: uppercase;
+			margin-left: calc($index * 0.43);
+			&::before {
+				content: "";
+				display: block;
+				width: calc($index * 0.86);
+				height: calc($index * 0.86);
+				background-image: url(../images/dist/icons/bonus-star.png);
+				background-position: center center;
+				background-repeat: no-repeat;
+				background-size: cover;
+				margin-right: calc($index * 0.2);
+			}
+		}
+	}
+
+	// .shop-panel__result
+
+	&__result {
+		font-size: calc($index * 0.8);
+		line-height: 1.3;
+		font-weight: 300;
+		span {
+			font-family: noto-sans-tm;
+			font-weight: 700;
+			margin-left: calc($index * 0.3);
+		}
+	}
+
+	// .shop-panel__purchase
+
+	&__purchase {
+		padding: calc($index * 0.33) calc($index * 0.8);
+	}
+
+	// .shop-panel__bottom
+
+	&__bottom {
+	}
+
+	// .shop-panel__control
+
+	&__control {
+	}
+}
+
+.panel-control {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	gap: calc($index * 0.33);
+
+	// .panel-control__button
+
+	&__button {
+		width: calc($index * 1.03);
+		height: calc($index * 1.46);
+		background-color: $black;
+		border: 1px solid $button-bg;
+		background-image: url(../images/dist/icons/arrow.svg);
+		background-repeat: no-repeat;
+		background-position:  center;
+		transition: background-color .25s ease;
+		@media(any-hover: hover) {
+			&:hover {
+				background-color: lighten($black, 5%);
+			}
+		}
+	}
+
+	// .panel-control__value
+
+	&__value {
+		position: relative;
+		background: linear-gradient(
+			90deg,
+			rgba(66, 66, 66, 0) 9.17%,
+			rgba(66, 66, 66, 1) 51.3%,
+			rgba(66, 66, 66, 0) 92.5%
+		);
+		font-weight: 400;
+		font-size: calc($index * 0.66);
+		line-height: 1.2;
+		text-align: center;
+		text-transform: uppercase;
+		color: #ffffff;
+		span {
+			padding: calc($index * 0.33) calc($index * 2);
+			display: block;
+			color: #ffffff;
+			text-shadow: 1px 1px 2px black, 0 0 10px #ffffff;
+			background-color: $black;
+			margin: calc($index * 0.06);
+		}
+	}
+}
+.button-prew {
+}
+.button-next {
+	transform: rotate(-180deg);
 }
