--- a/app/styles/sass/blocks/settings.scss
+++ b/app/styles/sass/blocks/settings.scss
@@ -5,7 +5,7 @@
 	// .settings__progress
 
 	&__progress {
-		margin-bottom: calc($index * 1.33);
+		margin-bottom: calc($index * 1);
 	}
 }
 .progress-block {
@@ -15,7 +15,7 @@
 		display: flex;
 		font-weight: 400;
 		font-size: calc($index * 0.5);
-		line-height: calc($index * 0.6);
+		line-height: 1.2;
 		color: $white;
 		margin-bottom: calc($index * 0.2);
 		text-transform: uppercase;
@@ -64,7 +64,7 @@
 	&__value {
 		font-weight: 500;
 		font-size: calc($index * 0.5);
-		line-height: calc($index * 0.67);
+		line-height: 1.2;
 		display: flex;
 		justify-content: center;
 		align-items: center;
@@ -115,7 +115,7 @@
 		grid-template-columns: repeat(3, 1fr);
 		gap: 2px;
 		height: calc($index * 1.47);
-		margin-bottom: calc($index * 2.53);
+		margin-bottom: calc($index * 2.23);
 	}
 	// .panel-settings__bonus
 
@@ -257,34 +257,4 @@
 	100% {
 		opacity: 0.25;
 	}
-}
-
-.progress-block {
-	// .progress-block__title
-
-	&__title {
-	}
-
-	// .progress-block__title-category
-
-	&__title-category {
-	}
-
-	// .progress-block__body
-
-	&__body {
-	}
-
-	// .progress-block__track
-
-	&__track {
-	}
-
-	// .progress-block__value
-
-	&__value {
-	}
-}
-
-.enterprise {
 }
