--- a/app/styles/sass/blocks/example-block.scss
+++ b/app/styles/sass/blocks/example-block.scss
@@ -109,7 +109,7 @@
 	}
 
 	&__title {
-		margin-bottom: 15px;
+		margin-bottom: calc($index * .5);
 		h1 {
 			font-family: $titlefont;
 			font-weight: 100;
@@ -143,7 +143,7 @@
 
 	&__title {
 		color: rgba($white, 0.75);
-		margin-bottom: calc($index * 1.47);
+		margin-bottom: calc($index * 1);
 		h2 {
 			font-style: normal;
 			font-weight: 300;
