--- a/app/styles/sass/blocks/slider-cases.scss
+++ b/app/styles/sass/blocks/slider-cases.scss
@@ -1,27 +1,9 @@
 .block-cases {
 	position: relative;
 	overflow-x: hidden;
-	max-width: 960px;
+	max-width: calc($index * 32);
 	margin: 0 auto;
-	padding-top: 15px;
-	.swiper {
-	}
-
-	.swiper-slide {
-		width: 100%;
-		text-align: center;
-		font-size: 18px;
-		display: flex;
-		flex-direction: column;
-		user-select: none;
-	}
-
-	.swiper-slide img {
-		display: block;
-		width: 100%;
-		height: 100%;
-		object-fit: cover;
-	}
+	padding-top: calc($index * 0.5);
 
 	.swiper-button-prev,
 	.swiper-button-next {
@@ -30,7 +12,7 @@
 		background-color: $black;
 		border: 1px solid $button-bg;
 		transition: background-color 0.25s ease;
-		top: 330px;
+		top: calc($index * 13);
 		@media (any-hover: hover) {
 			&:hover {
 				background-color: lighten($black, 5%);
@@ -38,7 +20,7 @@
 		}
 		&::after {
 			color: #f5f5f5;
-			font-size: 11px;
+			font-size: calc($index * 0.36);
 		}
 	}
 
@@ -52,19 +34,28 @@
 }
 
 .slider-cases {
-	max-width: 700px;
+	max-width: calc($index * 23.3);
+	margin-bottom: calc($index * 1);
 	// .slider-services__slide
 
 	&__slide {
+		width: 100%;
+		text-align: center;
+		font-size: calc($index * 0.6);
+		display: flex;
+		flex-direction: column;
+		user-select: none;
 	}
 
 	// .slider-services__img
 
 	&__video {
-		margin-bottom: 25px;
+		margin-bottom: calc($index * 0.83);
 		video {
 			display: block;
 			width: 100%;
+			height: 100%;
+			object-fit: cover;
 		}
 	}
 
@@ -74,8 +65,8 @@
 		font-family: raleway-tm, sans-serif;
 		h3 {
 			font-weight: 500;
-			font-size: 24px;
-			line-height: 130%;
+			font-size: calc($index * 0.8);
+			line-height: 1.3;
 			text-align: center;
 			text-transform: uppercase;
 			color: rgba(#f5f5f5, 0.65);
@@ -83,8 +74,8 @@
 
 		p {
 			font-weight: 300;
-			font-size: 18px;
-			line-height: 130%;
+			font-size: calc($index * 0.6);
+			line-height: 1.3;
 			text-align: center;
 			color: rgba(#f5f5f5, 0.65);
 			margin: 0;
@@ -92,8 +83,6 @@
 	}
 }
 
-.swiper-slide {
-}
 .slider-cases-logo {
 	margin: 0 auto;
 
@@ -108,19 +97,36 @@
 	&__items {
 		display: flex;
 		justify-content: center;
-		gap: 70px;
+		gap: calc($index * 1.8);
 	}
 
 	// .slider-services-logo__item
 
 	&__item {
-		flex: 0 1 auto;
-		height: 170px;	
+		flex: 0 1 calc($index * 10.4);
+		text-align: center;
 		position: relative;
+	}
+
+	&__icon {
+		display: inline-block;
+		height: calc($index * 2.7);
+		margin-bottom: calc($index * 0.83);
 		img {
 			display: block;
 			width: 100%;
-			object-fit: cover;
+			height: 100%;
+			//object-fit: cover;
+		}
+	}
+
+	&__text {
+		p {
+			font-weight: 300;
+			font-size: calc($index * 0.53);
+			line-height: 1.3;
+			color: #f5f5f5;
+			text-align: start;
 		}
 	}
 }
