--- a/app/styles/sass/blocks/slider-services.scss
+++ b/app/styles/sass/blocks/slider-services.scss
@@ -1,27 +1,9 @@
 .block-services {
 	position: relative;
 	overflow-x: hidden;
-	max-width: 960px;
+	max-width: calc($index * 32);
 	margin: 0 auto;
-	padding-top: 15px;
-	.swiper {
-	}
-
-	.swiper-slide {
-		width: 100%;
-		text-align: center;
-		font-size: 18px;
-		display: flex;
-		flex-direction: column;
-		user-select: none;
-	}
-
-	.swiper-slide img {
-		display: block;
-		width: 100%;
-		height: 100%;
-		object-fit: cover;
-	}
+	padding-top: calc($index * .5);
 
 	.swiper-button-prev,
 	.swiper-button-next {
@@ -30,7 +12,7 @@
 		background-color: $black;
 		border: 1px solid $button-bg;
 		transition: background-color 0.25s ease;
-		top: 330px;
+		top: calc($index * 11);
 		@media (any-hover: hover) {
 			&:hover {
 				background-color: lighten($black, 5%);
@@ -38,7 +20,7 @@
 		}
 		&::after {
 			color: #f5f5f5;
-			font-size: 11px;
+			font-size: calc($index * .36);
 		}
 	}
 
@@ -52,16 +34,28 @@
 }
 
 .slider-services {
-	max-width: 700px;
+	max-width: calc($index * 23.3);
 	// .slider-services__slide
 
 	&__slide {
+		width: 100%;
+		text-align: center;
+		font-size: calc($index * .6);
+		display: flex;
+		flex-direction: column;
+		user-select: none;
 	}
 
 	// .slider-services__img
 
 	&__img {
-		margin-bottom: 25px;
+		margin-bottom: calc($index * .83);
+		img {
+			display: block;
+			width: 100%;
+			height: 100%;
+			object-fit: cover;
+		}
 	}
 
 	// .slider-services__title
@@ -70,8 +64,8 @@
 		font-family: raleway-tm, sans-serif;
 		h3 {
 			font-weight: 500;
-			font-size: 24px;
-			line-height: 130%;
+			font-size: calc($index * .8);
+			line-height: 1.3;
 			text-align: center;
 			text-transform: uppercase;
 			color: rgba(#f5f5f5, 0.65);
@@ -79,8 +73,8 @@
 
 		p {
 			font-weight: 300;
-			font-size: 18px;
-			line-height: 130%;
+			font-size: calc($index * .6);
+			line-height: 1.3;
 			text-align: center;
 			color: rgba(#f5f5f5, 0.65);
 			margin: 0;
@@ -88,8 +82,6 @@
 	}
 }
 
-.swiper-slide {
-}
 .slider-services-logo {
 	margin: 0 auto;
 
@@ -104,17 +96,15 @@
 	&__items {
 		display: flex;
 		justify-content: center;
-		gap: 70px;
+		gap: calc($index * 2.33);
 	}
 
 	// .slider-services-logo__item
 
 	&__item {
 		flex: 0 1 auto;
-		height: 170px;
-	
+		height: calc($index * 5.66);	
 		position: relative;
-		
 		img {
 			display: block;
 			width: 100%;
