--- a/app/styles/sass/blocks/preloader.scss
+++ b/app/styles/sass/blocks/preloader.scss
@@ -5,16 +5,13 @@
 	}
 }
 .preloader {
-	position:absolute;
-	top: 0;
-	left: 0;
 	width: 100%;
 	height: 100%;
 	display: flex;
 	justify-content: center;
 	align-items: center;
 	width: 100%;
-	height: 100%;
+	height: calc($index * 19.56);
 
 	&__container {
 		max-width: 360px;
