--- a/app/styles/sass/blocks/settings.scss
+++ b/app/styles/sass/blocks/settings.scss
@@ -99,10 +99,9 @@
 
 .panel-settings {
 	display: grid;
-	grid-template-columns: calc($index * 8.96) calc($index * 10.36) calc(
-			$index * 1.3
-		);
+	grid-template-columns: calc($index * 8.96) 1fr calc($index * 1.3);
 	align-items: end;
+	gap: 10px;
 	// .panel-settings__tracks
 
 	&__tracks {
@@ -138,7 +137,7 @@
 			background-position: center center;
 			background-repeat: no-repeat;
 			background-size: cover;
-			margin-right: 6px;
+			margin-right: calc($index * 0.2);
 		}
 		span {
 			text-transform: uppercase;
@@ -257,4 +256,45 @@
 	100% {
 		opacity: 0.25;
 	}
+}
+
+.settings-panel-left {
+	position: absolute;
+	top: calc($index * .33);
+	bottom: calc($index * .33);
+	left: 0;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	padding: calc($index * 2.5) calc($index * .33) calc($index * .33);
+
+	&__bonus {
+		width: calc($index * 1.33);
+		height: calc($index * 1.33);
+		border: 1px solid rgba(#fff, .25);
+		background-position: center center;
+		background-repeat: no-repeat;
+		background-size: calc($index * .93);
+		background-image: url(../images/dist/icons/bonus-diamond.png);
+		margin-bottom: calc($index * 3.33);
+	}
+}
+.panel-settings {
+
+		// .panel-settings__bonus
+
+		&__bonus {
+		}
+
+		// .panel-settings__icons
+
+		&__icons {
+		}
+
+		// .panel-settings__icon
+
+		&__icon {
+		}
+}
+.bonus-block {
 }
