--- a/app/styles/sass/blocks/slider-services.scss
+++ b/app/styles/sass/blocks/slider-services.scss
@@ -1,9 +1,11 @@
-.block-services {
-	position: relative;
+.block-services {	
 	overflow-x: hidden;
-	max-width: calc($index * 32);
-	margin: 0 auto;
 	padding-top: calc($index * .5);
+	&__container {
+		position: relative;
+		max-width: calc($index * 32);
+		margin: 0 auto;
+	}
 
 	.swiper-button-prev,
 	.swiper-button-next {
@@ -12,7 +14,7 @@
 		background-color: $black;
 		border: 1px solid $button-bg;
 		transition: background-color 0.25s ease;
-		top: calc($index * 11);
+		top: calc($index * 7);
 		@media (any-hover: hover) {
 			&:hover {
 				background-color: lighten($black, 5%);
