--- a/app/styles/sass/blocks/menu-burger.scss
+++ b/app/styles/sass/blocks/menu-burger.scss
@@ -1,13 +1,20 @@
 .burger {
 	display: block;
 	width: calc($index * 1.335);
-	height: calc($index * 1);
-	margin-right: calc($index * .15);
+	height: calc($index * 1);	
 	position: relative;
 	transform: rotate(0deg);
 	transition: 0.5s ease-in-out;
 	cursor: pointer;
 	z-index: 100;
+}
+
+.settings-burger {
+	margin-left: calc($index * .15);
+}
+
+.nav-burger {
+	margin-right: calc($index * .15);
 }
 
 .burger span {
